# yueling

./: .env.example  .gitignore  README.md  Taskfile.yml  bot.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
ai/: chat.py  confirm.py  dispatcher.py  executor.py  guard.py  llm.py  memory.py  proactive.py  prompt.py  rate_limit.py  registry.py  replay.py  route.py  scanner.py  session.py  trace.py
ai/tools/: __init__.py  analysis.py  context.py  fun.py  knowledge.py  language.py  productivity.py  social.py  utility.py  web.py
bootstrap/: __init__.py  startup.py
common/: __init__.py
common/Alc/: Alc.py  Permission.py  alc.md  utils.py
common/base/: Depends.py  Handle.py  Permission.py  Plugin.py  __init__.py  utils.py
common/biz/: __init__.py  http.py  result.py
common/config/: __init__.py  config.py  constants.py  message.py
common/database/: DBBase.py  GFManager.py  ImageManager.py  RecordManager.py  ReplyManager.py
common/models/: __init__.py  ba.py  base.py  file.py  image.py
common/utils/: __init__.py  api.py  content_convert.py  downloader.py  draw.py  rnd.py  test_draw.py  translate.py  util.py
core/: __init__.py  config.py  context.py  database.py  errors.py  handler.py  http.py  lifecycle.py  permission.py  plugin.py  store.py  tool_policy.py
models/: __init__.py  group_file.py  message_stat.py  pixiv.py  pk.py  record.py  reply.py
plugins/ai_dispatch/: __init__.py
plugins/ai_proactive/: __init__.py
plugins/funny/: __init__.py  router.py
plugins/funny/chat/: __init__.py  relation.py  router.py  utils.py
plugins/funny/fortune/: __init__.py  consts.py  data_source.py  utils.py
plugins/funny/hot/: __init__.py  router.py  utils.py
plugins/funny/jm/: __init__.py
plugins/funny/music/: __init__.py
plugins/funny/poke/: __init__.py
plugins/funny/recorder/: __init__.py
plugins/funny/repeater/: __init__.py
plugins/funny/sleep/: __init__.py
plugins/funny/trace_moe/: __init__.py  router.py  utils.py
plugins/funny/watch_tv/: __init__.py
plugins/game/: __init__.py
plugins/game/jw3/: __init__.py
plugins/game/pk/: __init__.py  const.py  db.py  utils.py
plugins/group/: __init__.py  router.py
plugins/group/ban/: __init__.py  router.py
plugins/group/file/: __init__.py  backup.py  models.py  router.py  utils.py
plugins/group/files/: __init__.py  backup_service.py  clear_service.py  config.py  exceptions.py  local_file_repo.py  models_domain.py  organize_service.py  qq_file_repo.py  query_service.py  recovery_service.py  task_executor.py
plugins/group/keyword/: __init__.py
plugins/group/manager/: __init__.py
plugins/group/member/: __init__.py  models.py
plugins/group/revoke/: __init__.py
plugins/group/rules/: __init__.py
plugins/random/: __init__.py
plugins/random/daily/: __init__.py  utils.py
plugins/random/emoticon/: __init__.py
plugins/random/image/: __init__.py  ba.py  utils.py
plugins/random/member/: __init__.py
plugins/random/quotation/: __init__.py
plugins/random/rename/: __init__.py  data_source.py
plugins/random/roll/: __init__.py
plugins/scheduler/: __init__.py  readme.md
plugins/scheduler/job/: job_manager.py
plugins/scheduler/memo/: __init__.py
plugins/system/: __init__.py  router.py
plugins/system/help/: __init__.py  router.py
plugins/system/image/: __init__.py  utils.py
plugins/system/plugin/: __init__.py  manager.py
plugins/system/reboot/: __init__.py
plugins/system/reply/: __init__.py  reply.py
plugins/test/: __init__.py  原始命令.py  回复消息.py  所有消息.py  提示词指引.py  消息.py  消息篡改.py  登录与延迟验证码.py  登录系统.py  额外验证.py
plugins/tools/: __init__.py
plugins/tools/calculator/: __init__.py
plugins/tools/clockin/: __init__.py
plugins/tools/image/: __init__.py
plugins/tools/link_analysis/: __init__.py  behance.py  bilibili.py  csdn.py  music163.py  twitter.py  weibo.py  ytb.py  yueli.py  zhihu.py  zold.py
plugins/tools/ocr/: __init__.py
plugins/tools/search/: __init__.py  ae.py
plugins/tools/translate/: __init__.py
plugins/user/: __init__.py
plugins/user/tag/: __init__.py
repositories/: __init__.py  group_file_repo.py  pixiv_repo.py  pk_repo.py  record_repo.py  reply_repo.py
scripts/: migrate_data.py
server/: __init__.py  routes.py  server.py
services/: __init__.py  downloader.py  draw.py  external_api.py  fun_api.py  html_parser.py  http_fetch.py  image_db.py  ocr.py  qq_api.py  random_image.py  text_render.py  translate.py
test/: pdf.py  test.py
tests/: conftest.py  test_boundary.py  test_dispatcher.py  test_draw.py  test_guard.py  test_integration.py  test_permission.py  test_rate_limit.py  test_registry.py  test_registry_fields.py  test_replay.py  test_repositories.py  test_route.py  test_services_translate.py  test_store.py  test_tool_policy.py  test_trace.py
