[project]
name = "demo"
version = "0.1.0"
description = "demo"
readme = "README.md"
requires-python = ">=3.10, <4.0"
dependencies = [
    "aiofiles>=24.1.0,<25.0.0",
    "aiohttp>=3.11.10,<4.0.0",
    "beautifulsoup4>=4.12.3,<5.0.0",
    "cloudscraper>=1.2.71",
    "deepl>=1.20.0,<2.0.0",
    "httpx==0.27.2",
    "matplotlib>=3.0.0",
    "meme-generator>=0.0.18,<1.0.0",
    "natsort>=8.4.0",
    "nb-cli>=1.4.2,<2.0.0",
    "nonebot-adapter-onebot>=2.4.6,<3.0.0",
    "nonebot-plugin-apscheduler>=0.5.0,<1.0.0",
    "nonebot-plugin-memes>=0.6.2,<1.0.0",
    "nonebot-plugin-orm[default]>=0.8.3",
    "nonebot-plugin-userinfo>=0.2.6",
    "nonebot-plugin-waiter>=0.8.0",
    "nonebot2[fastapi]>=2.4.0,<3.0.0",
    "openai>=2.16.0",
    "pillow>=12.1.0",
    "playwright>=1.49.1,<2.0.0",
    "pytest>=8.3.4,<9.0.0",
    "pytest-asyncio>=0.25.0,<1.0.0",
    "python-multipart>=0.0.6,<1.0.0",
    "python-socketio>=5.11.4,<6.0.0",
    "qrcode>=8.0,<9.0",
    "ruff>=0.8.3,<1.0.0",
    "sqlalchemy>=2.0.36,<3.0.0",
    "tenacity>=9.1.2",
    "toml>=0.10.2,<1.0.0",
    "websockets>=14.0.0,<15.0.0",
]

[tool.nonebot]
adapters = [
  { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
]
plugins = [ "nonebot_plugin_memes","plugins.funny","plugins.group","plugins.random","plugins.scheduler","plugins.system","plugins.tools","plugins.game"]



[tool.ruff]
line-length = 150
target-version = "py311"
indent-width = 2


[tool.ruff.lint]
select = [
  "F",     # Pyflakes
  "W",     # pycodestyle warnings
  "E",     # pycodestyle errors
  "I",     # isort
  "UP",    # pyupgrade
  "ASYNC", # flake8-async
  "C4",    # flake8-comprehensions
  "T10",   # flake8-debugger
  "T20",   # flake8-print
  "PYI",   # flake8-pyi
  "PT",    # flake8-pytest-style
  "Q",     # flake8-quotes
  "TID",   # flake8-tidy-imports
  "RUF",   # Ruff-specific rules
]
ignore = [
  "E402",   # module-import-not-at-top-of-file
  "UP037",  # quoted-annotation
  "RUF001", # ambiguous-unicode-character-string
  "RUF002", # ambiguous-unicode-character-docstring
  "RUF003", # ambiguous-unicode-character-comment
  "TID252",

]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
extra-standard-library = ["typing_extensions"]


[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true


[tool.pytest.ini_options]
asyncio_mode = "strict"
